# logging-agent

./: .gitignore  .prettierrc.json  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
src/: main.rs
src/routers/: log_router.rs  mod.rs
src/services/: get_logs.rs  mod.rs  post_log.rs
