[package]
name = "logging-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"                                       # Web 框架
tokio = { version = "1", features = ["full"] }     # async runtime
serde = { version = "1.0", features = ["derive"] } # JSON 序列化
serde_json = "1.0"                                 # JSON 解析
tracing = "0.1"                                    # logging
tracing-subscriber = "0.3"                         # logging 輸出設定
hyper = { version = "0.14", features = ["full"] }
tower-http = {version = "0.6.6", features = ["trace"]}
